thor and wolverine added to bio page

--- a/avengers.html
+++ b/avengers.html
@@ -254,7 +254,10 @@
                 <div class="text-box-lg">
                     <h2 class="bangers-font">Spider-Man</h2>
                     <p>
-                        As a result of a radioactive spider bite, high school student Peter Parker developed powers and special abilities similar to that of a spider. After Peter's selfishness indirectly resulted in the death of his beloved Uncle Ben, Peter decided to live up to the motto that "With great power there must also come great responsibility," and thus became the superhero known as Spider-Man.
+                        As a result of a radioactive spider bite, high school student Peter Parker developed powers and
+                        special abilities similar to that of a spider. After Peter's selfishness indirectly resulted in
+                        the death of his beloved Uncle Ben, Peter decided to live up to the motto that "With great power
+                        there must also come great responsibility," and thus became the superhero known as Spider-Man.
                     </p>
                 </div>
             </div>
@@ -264,16 +267,78 @@
                 <div class="text-box-lg">
                     <h2 class="bangers-font">Thanos</h2>
                     <p>
-                        Thanos was one of the last sons of A'Lars, progenitor of the second colony of Eternals on Titan, and Sui-San, the last survivor of the original settlement of Eternals on Titan. Born with purple, hide-like skin and a massive body due to being born with the Deviant Syndrome, Thanos was a morose child who became obsessed with the concept of death. Through bionic implementation and long hours of meditation, Thanos augmented his Eternal strengths and powers so that his abilities surpassed those of all other Titanian Eternals.
+                        Thanos was one of the last sons of A'Lars, progenitor of the second colony of Eternals on Titan,
+                        and Sui-San, the last survivor of the original settlement of Eternals on Titan. Born with
+                        purple, hide-like skin and a massive body due to being born with the Deviant Syndrome, Thanos
+                        was a morose child who became obsessed with the concept of death. Through bionic implementation
+                        and long hours of meditation, Thanos augmented his Eternal strengths and powers so that his
+                        abilities surpassed those of all other Titanian Eternals.
 
-                        Using science and his unmatched cunning, Thanos created the Infinity Gauntlet, giving him mastery of Soul Gems.
-                        Using the massive power now in his possession,Thanos used the Infinity Gauntlet to remove half of the population of the universe, causing dire consequences with his actions and becoming sworn enemy of Earths Avengers.
+                        Using science and his unmatched cunning, Thanos created the Infinity Gauntlet, giving him
+                        mastery of Soul Gems.
+                        Using the massive power now in his possession,Thanos used the Infinity Gauntlet to remove half
+                        of the population of the universe, causing dire consequences with his actions and becoming sworn
+                        enemy of Earths Avengers.
                     </p>
                 </div>
             </div>
             <div class="col-6 col-md-3">
                 <div class="img-box img-box-blue">
                     <div class="avenger-thanos">
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-md-row flex-column align-items-center">
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-thor">
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Thor</h2>
+                    <p>
+                        Leaping from the legends of Norse mythology, the Asgardian God of Thunder, Thor Odinson, is the
+                        son of Odin the All-Father and Jord, Elder Goddess and spirit of the Earth. He frequently stands
+                        alongside the Avengers in the defense of the people of Midgard (Earth), often against the
+                        schemes of his adopted brother Loki. He formerly dwelt in a recreation of Asgard in Oklahoma,
+                        using the mortal form of Donald Blake to provide a bridge between his people and the mortals
+                        surrounding them. However, Loki's subtle trickery and manipulations of Balder, combined with her
+                        time-twisting of Asgard's past and that of Bor and Odin's has enabled her to banish Thor from
+                        Asgard, stripping him of his titles, throne and legal power, and move his people to Doctor
+                        Doom's Latveria, having planned this ever since her rebirth. Thor returned to Asgard, just in
+                        time to aid them in a battle against Norman Osborn's Dark Avengers, X-Men, and H.A.M.M.E.R.,
+                        killing Sentry after he destroyed Asgard. Feeling lonely, Thor has resurrected his brother Loki
+                        and father Odin and they continue to battle-on for the survival of Asgard.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="row flex-md-row flex-column-reverse align-items-center">
+            <div class="col-12 col-md-9">
+                <div class="text-box-lg">
+                    <h2 class="bangers-font">Wolverine</h2>
+                    <p>
+                        With a past shrouded in mystery, Wolverine's memories are full of government secrets, traumatic
+                        events, and death. Remembering only escaping from Weapon X and later joining Alpha Flight, the
+                        man known as Logan was approached with a chance to change the world, by Professor Charles
+                        Xavier.
+
+                        After joining Professor X's X-Men, Wolverine has been using his mutant powers, to heal at an
+                        accelerated rate, enhanced physical condition, animal-like instincts, and razor sharp bone claws
+                        that protrude from between his knuckles laced with the indestructible metal Adamantium like the
+                        rest of his skeleton, to fight for the peaceful coexistence of mutants and humans most of his
+                        life.
+                    </p>
+                </div>
+            </div>
+            <div class="col-6 col-md-3">
+                <div class="img-box img-box-blue">
+                    <div class="avenger-wolverine">
 
                     </div>
                 </div>
