--- a/avengers.html
+++ b/avengers.html
@@ -82,7 +82,7 @@
                 </div>
             </div>
             <div class="col-6 col-md-3">
-                <div class="img-box img-box-blue">
+                <div class="img-box img-box-grey">
                     <div class="avenger-antman">
 
                     </div>
@@ -91,7 +91,7 @@
         </div>
         <div class="row flex-md-row flex-column align-items-center">
             <div class="col-6 col-md-3">
-                <div class="img-box img-box-blue">
+                <div class="img-box img-box-red">
                     <div class="avenger-daredevil">
 
                     </div>
@@ -144,7 +144,7 @@
         </div>
         <div class="row flex-md-row flex-column align-items-center">
             <div class="col-6 col-md-3">
-                <div class="img-box img-box-blue">
+                <div class="img-box img-box-brown">
                     <div class="avenger-groot">
 
                     </div>
@@ -182,7 +182,7 @@
                 </div>
             </div>
             <div class="col-6 col-md-3">
-                <div class="img-box img-box-blue">
+                <div class="img-box img-box-purple">
                     <div class="avenger-hawkeye">
 
                     </div>
@@ -191,7 +191,7 @@
         </div>
         <div class="row flex-md-row flex-column align-items-center">
             <div class="col-6 col-md-3">
-                <div class="img-box img-box-blue">
+                <div class="img-box img-box-green">
                     <div class="avenger-hulk">
 
                     </div>
@@ -244,7 +244,7 @@
         </div>
         <div class="row flex-md-row flex-column align-items-center">
             <div class="col-6 col-md-3">
-                <div class="img-box img-box-blue">
+                <div class="img-box img-box-red">
                     <div class="avenger-spiderman">
 
                     </div>
@@ -283,7 +283,7 @@
                 </div>
             </div>
             <div class="col-6 col-md-3">
-                <div class="img-box img-box-blue">
+                <div class="img-box img-box-purple">
                     <div class="avenger-thanos">
 
                     </div>
@@ -292,7 +292,7 @@
         </div>
         <div class="row flex-md-row flex-column align-items-center">
             <div class="col-6 col-md-3">
-                <div class="img-box img-box-blue">
+                <div class="img-box img-box-grey">
                     <div class="avenger-thor">
 
                     </div>
