avengers bio html updated

--- a/avengers.html
+++ b/avengers.html
@@ -58,9 +58,14 @@
                     <h2 class="bangers-font">Captain America</h2>
                     <p>
                         During the dark days of the early 1940's, a covert U.S. Military experiment turned Steve Rogers
-                        into America's first Super-Soldier, Captain America. Throughout the war, Cap and his partner,
+                        into America's first Super-Soldier, Captain America.
+                    </p>
+                    <p>
+                        Throughout the war, Cap and his partner,
                         Bucky fought alongside infantry and with a group of heroes known as the Invaders. In the closing
                         months of World War II, Captain America and Bucky were both presumed dead in an explosion.
+                    </p>
+                    <p>
                         Decades later, Captain America was found trapped in ice and revived in the modern world. Captain
                         America would then later go on to be one of the most important members of the Avengers as well
                         as a leader of the team.
@@ -74,7 +79,10 @@
                     <h2 class="bangers-font">Ant-Man</h2>
                     <p>
                         Ant-Man is a legacy super-hero name, primarily associated with the ability to shrink in size.
-                        The original was Hank Pym; he was a founding member of the Avengers. Scott Lang took the name,
+                        The original was Hank Pym; he was a founding member of the Avengers.
+                    </p>
+                    <p>
+                        Scott Lang took the name,
                         an ex-con who broke into the New Jersey home of Dr. Henry Pym, and stole the Ant-Man's Suit.
                         Lang has been a member of the Avengers, Fantastic Four and Future Foundation. Eric O'Grady took
                         the mantle until his death.
@@ -103,7 +111,8 @@
                     <p>
                         The son of boxer Battlin' Jack, Matt Murdock grew up in the relative poverty of Hell's Kitchen
                         with much reverence for his father.
-
+                    </p>
+                    <p>
                         As a boy, Matt witnessed a man about to be hit by a truck
                         and pushed him out of the way but the truck crashed and spilled its cargo of extremely toxic
                         chemicals into his face. He awoke in the hospital blind from the toxins and learned that his
@@ -111,7 +120,8 @@
                         around him, giving him ultimate confidence in his surroundings. He
                         met a blind martial arts master named Stick, who taught him to hone his senses and trained him
                         in martial arts.
-
+                    </p>
+                    <p>
                         As an adult, he became a lawyer and opened a law firm with Foggy Nelson while secretly taking on
                         the mantle of Daredevil in order to protect the citizens of Hell's Kitchen
                     </p>
@@ -126,10 +136,12 @@
                         Wade Wilson was an international assassin who had worked for various governments when he
                         developed an aggressive cancer. In an effort to find a cure, he enrolled in the Weapon X program
                         in Canada, which gave him a healing factor from another member and set him to work for them.
+                    </p>
+                    <p>
                         When he killed a team member, he was thrown out of the program and was sent to have his
                         abilities removed, where he was experimented on instead. The results of his stay there were a
                         diminished mental state, a healing factor that could not cure his cancer or heal his scars, an
-                        infatuation with death, and his freedom to return to for-hire mercenary work. As "The Merc with
+                        infatuation with death, and his freedom to return to for-hire mercenary work.<br> As "The Merc with
                         a Mouth" he set out as Deadpool to kill and have a good time doing it.
                     </p>
                 </div>
@@ -157,9 +169,13 @@
                         Groot was a Flora colossi from Planet X, the capital of the branch worlds. He did not get along
                         with his fellow saplings, instead preferring the company of the "Maintenance Mammals" who the
                         other saplings treated with prejudice.
+                    </p>
+                    <p>
                         Into his adulthood, Groot found himself in Kree space, where he was promptly captured and
                         imprisoned. While in jail, he formed a rapport with Rocket Raccoon and was assigned to a covert
                         ops team led by Starlord.
+                    </p>
+                    <p>
                         Groot joined Star-Lord's Guardians of the Galaxy, alongside many of those he had fought against
                         the Phalanx alongside, including Rocket.
                     </p>
@@ -174,6 +190,8 @@
                         Clinton "Clint" Barton aka Hawkeye is an American skilled marksman, archer, and former special
                         agent of S.H.I.E.L.D. turned member of the Avengers; "Earth's Mightiest Heroes. As a member of
                         the Avengers he always had friction with the team but always returned to fight any threat.
+                    </p>
+                    <p>
                         Barton was raised in the circus, trained by criminals and grew from a troubled youth into one of
                         the Earth's greatest heroes. Known for his use of a bow and arrow as his primary weapon, his
                         skill is so great that it appears like he never misses. He has worked with Black Widow, whom he
@@ -205,13 +223,13 @@
                         out on the test range. Although he rushed out into the test site and heroically pushed the boy
                         into the protective trench to save him from the blast, Bruce was exposed to extreme amounts of
                         gamma radiation that altered his DNA structure due to gamma rays and trauma passed down by his
-                        father and caused him to become a giant green (at first grey) monster of incredible power known
+                        father and caused him to become a giant green monster of incredible power known
                         as the Hulk whenever he starts to get angry.
-
+                    </p>
+                    <p>
                         With his girlfriend Betty Ross seemingly being the only person able to calm the Hulk back into
                         Banner, and often being pursued by his nemesis Thunderbolt Ross who is also Betty's Father,
-                        Bruce is often on the run while trying to find a cure for his problem and keep calm as much as
-                        he can while at the same time battling super-villains.
+                        Bruce is often on the run while trying to find a cure for his problem and while at the same time battling super-villains.
                     </p>
                 </div>
             </div>
@@ -223,13 +241,12 @@
                     <p>
                         Genius billionaire inventor, industrialist and CEO of Stark Industries Tony Stark was fatally
                         wounded in a war zone in Afghanistan shortly before being kidnapped by terrorists. Stark built
-                        an armored suit to escape captivity, which doubled as a device to keep his heart beating keeping
-                        him alive. Once he returned to the United States, Stark reinvented himself as the armor-clad
+                        an armored suit to escape captivity, which doubled as a device to keep his heart beating. Once he returned to the United States, Stark reinvented himself as the armor-clad
                         superhero Iron Man.
-
+                    </p>
+                    <p>
                         In times when Tony Stark was indisposed, other men have carried on the legacy of Iron Man. Twice
-                        did Tony's best friend Jim Rhodes, and the duty has fallen into the hands of the reformed
-                        villain Victor von Doom. Most recently, the role has been usurped by Tony's adopted brother,
+                        did Tony's best friend Jim Rhodes. Most recently, the role has been usurped by Tony's adopted brother,
                         Arno Stark.
                     </p>
                 </div>
@@ -255,7 +272,10 @@
                     <h2 class="bangers-font">Spider-Man</h2>
                     <p>
                         As a result of a radioactive spider bite, high school student Peter Parker developed powers and
-                        special abilities similar to that of a spider. After Peter's selfishness indirectly resulted in
+                        special abilities similar to that of a spider. 
+                    </p>
+                    <p>
+                        After Peter's selfishness indirectly resulted in
                         the death of his beloved Uncle Ben, Peter decided to live up to the motto that "With great power
                         there must also come great responsibility," and thus became the superhero known as Spider-Man.
                     </p>
@@ -267,13 +287,13 @@
                 <div class="text-box-lg">
                     <h2 class="bangers-font">Thanos</h2>
                     <p>
-                        Thanos was one of the last sons of A'Lars, progenitor of the second colony of Eternals on Titan,
-                        and Sui-San, the last survivor of the original settlement of Eternals on Titan. Born with
+                        Thanos was one of the last son of A'Lars and Sui-San, the last survivor of the original settlement of Eternals on Titan. Born with
                         purple, hide-like skin and a massive body due to being born with the Deviant Syndrome, Thanos
                         was a morose child who became obsessed with the concept of death. Through bionic implementation
                         and long hours of meditation, Thanos augmented his Eternal strengths and powers so that his
                         abilities surpassed those of all other Titanian Eternals.
-
+                    </p>
+                    <p>
                         Using science and his unmatched cunning, Thanos created the Infinity Gauntlet, giving him
                         mastery of Soul Gems.
                         Using the massive power now in his possession,Thanos used the Infinity Gauntlet to remove half
@@ -302,17 +322,18 @@
                 <div class="text-box-lg">
                     <h2 class="bangers-font">Thor</h2>
                     <p>
-                        Leaping from the legends of Norse mythology, the Asgardian God of Thunder, Thor Odinson, is the
-                        son of Odin the All-Father and Jord, Elder Goddess and spirit of the Earth. He frequently stands
-                        alongside the Avengers in the defense of the people of Midgard (Earth), often against the
-                        schemes of his adopted brother Loki. He formerly dwelt in a recreation of Asgard in Oklahoma,
-                        using the mortal form of Donald Blake to provide a bridge between his people and the mortals
-                        surrounding them. However, Loki's subtle trickery and manipulations of Balder, combined with her
-                        time-twisting of Asgard's past and that of Bor and Odin's has enabled her to banish Thor from
-                        Asgard, stripping him of his titles, throne and legal power, and move his people to Doctor
-                        Doom's Latveria, having planned this ever since her rebirth. Thor returned to Asgard, just in
-                        time to aid them in a battle against Norman Osborn's Dark Avengers, X-Men, and H.A.M.M.E.R.,
-                        killing Sentry after he destroyed Asgard. Feeling lonely, Thor has resurrected his brother Loki
+                        The Asgardian God of Thunder, Thor Odinson, is the
+                        son of Odin the All-Father and Jord, Elder Goddess and spirit of the Earth.
+                    </p>
+                    <p>
+                        He frequently stands
+                        alongside the Avengers in the defense of the people of Midgard (Earth). However, Loki's subtle trickery and manipulations of Balder, Thor was banished from
+                        Asgard, stripping him of his titles, throne and legal power, and his people moved to Doctor
+                        Doom's Latveria.
+                    </p>
+                    <p>
+                        Thor returned to Asgard, just in
+                        time to aid them in a battle against Norman Osborn's Dark Avengers, X-Men, and H.A.M.M.E.R. Feeling lonely, Thor has resurrected his brother Loki
                         and father Odin and they continue to battle-on for the survival of Asgard.
                     </p>
                 </div>
@@ -327,7 +348,8 @@
                         events, and death. Remembering only escaping from Weapon X and later joining Alpha Flight, the
                         man known as Logan was approached with a chance to change the world, by Professor Charles
                         Xavier.
-
+                    </p>
+                    <p>
                         After joining Professor X's X-Men, Wolverine has been using his mutant powers, to heal at an
                         accelerated rate, enhanced physical condition, animal-like instincts, and razor sharp bone claws
                         that protrude from between his knuckles laced with the indestructible metal Adamantium like the
