--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
     <section class="footer-section bangers-font">
         <div class="container footer text-center d-flex justify-content-center container-max-width">
             <div class="footer-info">
-                <p>&#169;Russell Oakham</p>
-                <a href="https://github.com/RussOakham/"><i class="fab fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"><i class="fab fa-linkedin"></i></a>
+                <p class="site-designer">&#169;Russell Oakham</p>
+                <div class="social-links">
+                    <a href="https://github.com/RussOakham/"><i class="fab fa-github fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"><i class="fab fa-linkedin fa-lg"></i></a>
+                </div>
             </div>
         </div>
     </section>
