--- a/avengers.html
+++ b/avengers.html
@@ -141,7 +141,8 @@
                         When he killed a team member, he was thrown out of the program and was sent to have his
                         abilities removed, where he was experimented on instead. The results of his stay there were a
                         diminished mental state, a healing factor that could not cure his cancer or heal his scars, an
-                        infatuation with death, and his freedom to return to for-hire mercenary work.<br> As "The Merc with
+                        infatuation with death, and his freedom to return to for-hire mercenary work.<br> As "The Merc
+                        with
                         a Mouth" he set out as Deadpool to kill and have a good time doing it.
                     </p>
                 </div>
@@ -229,7 +230,8 @@
                     <p>
                         With his girlfriend Betty Ross seemingly being the only person able to calm the Hulk back into
                         Banner, and often being pursued by his nemesis Thunderbolt Ross who is also Betty's Father,
-                        Bruce is often on the run while trying to find a cure for his problem and while at the same time battling super-villains.
+                        Bruce is often on the run while trying to find a cure for his problem and while at the same time
+                        battling super-villains.
                     </p>
                 </div>
             </div>
@@ -241,12 +243,14 @@
                     <p>
                         Genius billionaire inventor, industrialist and CEO of Stark Industries Tony Stark was fatally
                         wounded in a war zone in Afghanistan shortly before being kidnapped by terrorists. Stark built
-                        an armored suit to escape captivity, which doubled as a device to keep his heart beating. Once he returned to the United States, Stark reinvented himself as the armor-clad
+                        an armored suit to escape captivity, which doubled as a device to keep his heart beating. Once
+                        he returned to the United States, Stark reinvented himself as the armor-clad
                         superhero Iron Man.
                     </p>
                     <p>
                         In times when Tony Stark was indisposed, other men have carried on the legacy of Iron Man. Twice
-                        did Tony's best friend Jim Rhodes. Most recently, the role has been usurped by Tony's adopted brother,
+                        did Tony's best friend Jim Rhodes. Most recently, the role has been usurped by Tony's adopted
+                        brother,
                         Arno Stark.
                     </p>
                 </div>
@@ -272,7 +276,7 @@
                     <h2 class="bangers-font">Spider-Man</h2>
                     <p>
                         As a result of a radioactive spider bite, high school student Peter Parker developed powers and
-                        special abilities similar to that of a spider. 
+                        special abilities similar to that of a spider.
                     </p>
                     <p>
                         After Peter's selfishness indirectly resulted in
@@ -287,7 +291,8 @@
                 <div class="text-box-lg">
                     <h2 class="bangers-font">Thanos</h2>
                     <p>
-                        Thanos was one of the last son of A'Lars and Sui-San, the last survivor of the original settlement of Eternals on Titan. Born with
+                        Thanos was one of the last son of A'Lars and Sui-San, the last survivor of the original
+                        settlement of Eternals on Titan. Born with
                         purple, hide-like skin and a massive body due to being born with the Deviant Syndrome, Thanos
                         was a morose child who became obsessed with the concept of death. Through bionic implementation
                         and long hours of meditation, Thanos augmented his Eternal strengths and powers so that his
@@ -327,13 +332,15 @@
                     </p>
                     <p>
                         He frequently stands
-                        alongside the Avengers in the defense of the people of Midgard (Earth). However, Loki's subtle trickery and manipulations of Balder, Thor was banished from
+                        alongside the Avengers in the defense of the people of Midgard (Earth). However, Loki's subtle
+                        trickery and manipulations of Balder, Thor was banished from
                         Asgard, stripping him of his titles, throne and legal power, and his people moved to Doctor
                         Doom's Latveria.
                     </p>
                     <p>
                         Thor returned to Asgard, just in
-                        time to aid them in a battle against Norman Osborn's Dark Avengers, X-Men, and H.A.M.M.E.R. Feeling lonely, Thor has resurrected his brother Loki
+                        time to aid them in a battle against Norman Osborn's Dark Avengers, X-Men, and H.A.M.M.E.R.
+                        Feeling lonely, Thor has resurrected his brother Loki
                         and father Odin and they continue to battle-on for the survival of Asgard.
                     </p>
                 </div>
@@ -363,6 +370,19 @@
                     <div class="avenger-wolverine">
 
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer-section bangers-font">
+        <div class="container footer text-center d-flex justify-content-center container-max-width">
+            <div class="footer-info">
+                <p class="site-designer">&#169;Russell Oakham</p>
+                <div class="social-links">
+                    <a href="https://github.com/RussOakham/"><i class="fab fa-github fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"><i
+                            class="fab fa-linkedin fa-lg"></i></a>
                 </div>
             </div>
         </div>
