--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avengers Snap | A Heroes Card Matching Game!</title>
-    <meta name="">
+    <meta name="description" content="Play Avengers Snap, the card matching game featuring all your favourite Marvel Characters">
+    <meta name="author" content="Russell Oakham">
+    <meta name="keywords" content="avengers, marvels avengers, card matching game, memory game, snap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
