audio and modal js updates based on JSHint review

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avengers Snap | A Heroes Card Matching Game!</title>
-    <meta name="description" content="Play Avengers Snap, the card matching game featuring all your favourite Marvel Characters">
+    <meta name="description"
+        content="Play Avengers Snap, the card matching game featuring all your favourite Marvel Characters">
     <meta name="author" content="Russell Oakham">
     <meta name="keywords" content="avengers, marvels avengers, card matching game, memory game, snap">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -63,7 +64,7 @@
                         role="button" aria-label="Difficulty">Difficulty</a>
                 </div>
                 <div class="p-2">
-                    <button class="btn btn-warning" onclick="resetCurrentGame()" id="reset-btn" role="button"
+                    <button class="btn btn-warning" onclick="resetCurrentGame()" id="reset-btn"
                         aria-label="Reset Game"><i class="fas fa-redo"></i></button>
                 </div>
                 <div class="p-right-0">
@@ -95,7 +96,8 @@
                 <p class="site-designer">&#169;Russell Oakham</p>
                 <div class="social-links">
                     <a href="https://github.com/RussOakham/"><i class="fab fa-github fa-lg"></i></a>
-                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"><i class="fab fa-linkedin fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"><i
+                            class="fab fa-linkedin fa-lg"></i></a>
                 </div>
             </div>
         </div>
