--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-colour sticky-top bangers-font">
                 <div class="container container-max-width">
-                    <a class="navbar-brand" href="index.html"><img src="assets/images/Avengers.svg"
+                    <a class="navbar-brand" href="index.html"><img height="40px" width="40px" src="assets/images/Avengers.svg"
                             alt="Avengers Snap Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
