aria-labels added to footer links and testing.md updates

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <div class="footer-info">
                 <p class="site-designer">&#169;Russell Oakham</p>
                 <div class="social-links">
-                    <a href="https://github.com/RussOakham/"><i class="fab fa-github fa-lg"></i></a>
-                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"><i
+                    <a href="https://github.com/RussOakham/"><i class="fab fa-github fa-lg" aria-label="Website Developers GitHub"></i></a>
+                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/" aria-label="Website Developers LinkedIn"><i
                             class="fab fa-linkedin fa-lg"></i></a>
                 </div>
             </div>
