--- a/avengers.html
+++ b/avengers.html
@@ -389,8 +389,8 @@
             <div class="footer-info">
                 <p class="site-designer">&#169;Russell Oakham</p>
                 <div class="social-links">
-                    <a href="https://github.com/RussOakham/"><i class="fab fa-github fa-lg"></i></a>
-                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"><i
+                    <a href="https://github.com/RussOakham/" aria-label="Website Developers GitHub"><i class="fab fa-github fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/" aria-label="Website Developers LinkedIn"><i
                             class="fab fa-linkedin fa-lg"></i></a>
                 </div>
             </div>
