--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 </head>
 
 <body>
-    <section class="navigation">
+    <section class="navigation sticky-top">
         <header>
-            <nav class="navbar navbar-expand-lg navbar-light navbar-colour sticky-top bangers-font">
+            <nav class="navbar navbar-expand-lg navbar-light navbar-colour bangers-font">
                 <div class="container container-max-width">
                     <a class="navbar-brand" href="index.html"><img height="40px" width="40px" src="assets/images/Avengers.svg"
                             alt="Avengers Snap Logo"></a>
