text and html updates in modals

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-colour bangers-font">
                 <div class="container container-max-width">
-                    <a class="navbar-brand" href="index.html"><img height="40px" width="40px" src="assets/images/Avengers.svg"
-                            alt="Avengers Snap Logo"></a>
+                    <a class="navbar-brand" href="index.html"><img height="40px" width="40px"
+                            src="assets/images/Avengers.svg" alt="Avengers Snap Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
                         aria-label="Toggle navigation">
@@ -95,9 +95,10 @@
             <div class="footer-info">
                 <p class="site-designer">&#169;Russell Oakham</p>
                 <div class="social-links">
-                    <a href="https://github.com/RussOakham/"><i class="fab fa-github fa-lg" aria-label="Website Developers GitHub"></i></a>
-                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/" aria-label="Website Developers LinkedIn"><i
-                            class="fab fa-linkedin fa-lg"></i></a>
+                    <a href="https://github.com/RussOakham/"><i class="fab fa-github fa-lg"
+                            aria-label="Website Developers GitHub"></i></a>
+                    <a href="https://www.linkedin.com/in/russell-oakham-11a08585/"
+                        aria-label="Website Developers LinkedIn"><i class="fab fa-linkedin fa-lg"></i></a>
                 </div>
             </div>
         </div>
@@ -121,7 +122,10 @@
                         </p>
                         <p>
                             The aim of the game is simple, match two cards via flipping them on the game board.<br>Once
-                            all cards are flipped - the game is complete!<br>Aim to complete the game in as few moves
+                            all cards are matched - the game is complete!
+                        </p>
+                        <p>
+                            im to complete the game in as few moves
                             and as short a time as possible!
                         </p>
                         <p>Select a difficulty setting below to start the game!</p>
@@ -153,9 +157,16 @@
                         <p>
                             You made <span id="move-score"></span> moves!<br>You took <span id="time-score"></span>
                         </p>
-                        <p>Why not try again on a higher difficulty?<br>Or aim to repeat the current level in less moves
-                            and time!</p>
-                        <p>Select a difficulty setting below to start a new game!</p>
+                        <p>
+                            Why not try again on a higher difficulty?
+                        </p>
+                        <p>
+                            Or aim to repeat the current level in less moves
+                            and time!
+                        </p>
+                        <p>
+                            Select a difficulty setting below to start a new game!
+                        </p>
                     </div>
                     <div class="modal-footer justify-content-center bangers-font">
                         <button type="button" class="btn btn-warning btn-easy level-btn"
