HTML - annotated code sections

--- a/avengers.html
+++ b/avengers.html
@@ -24,6 +24,7 @@
 </head>
 
 <body>
+    <!-- Navigation taken from bootstrap.com -->
     <section class="navigation sticky-top">
         <header>
             <nav class="navbar navbar-expand-lg navbar-light navbar-colour bangers-font">
@@ -46,6 +47,7 @@
         </header>
     </section>
 
+    <!-- Visual banner identifying 'Avengers Snap' game -->
     <section class="container logo-banner container-max-width">
         <div class="banner-container">
             <div class="avengers-banner">
@@ -53,6 +55,7 @@
         </div>
     </section>
 
+    <!-- Biographies and images for Avenger Characters - Stack in small viewport -->
     <section class="container">
         <div class="row flex-md-row flex-column align-items-center">
             <div class="col-6 col-md-3">
@@ -384,6 +387,7 @@
         </div>
     </section>
 
+    <!-- Footer - Website designed and social info -->
     <section class="footer-section bangers-font">
         <div class="container footer text-center d-flex justify-content-center container-max-width">
             <div class="footer-info">
@@ -399,7 +403,7 @@
 
 
 
-
+    <!-- Links to external Script Files -->
     <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js"
